--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "sass": "^1.71.1"
   },
   "scripts": {
